 * Docs: Reorganise snippets documentation to cover customisations and optional features (Sage Abdullah)
 * Maintenance: Switch to ruff for flake8 / isort code checking (Oliver Parker)
 * Maintenance: Deprecate `insert_editor_css` in favour of `insert_global_admin_css` (Ester Beltrami)
 * Maintenance: Optimise use of `specific` on Task and TaskState (Matt Westcott)


5.0.1 (25.05.2023)
~~~~~~~~~~~~~~~~~~

 * Fix: Rectify previous fix for TableBlock becoming uneditable after save (Sage Abdullah)
 * Fix: Ensure that copying page correctly picks up the latest revision (Matt Westcott)
 * Fix: Ensure comment buttons always respect `WAGTAILADMIN_COMMENTS_ENABLED` (Thibaud Colas)
 * Fix: Fix error when deleting a single snippet through the bulk actions interface (Sage Abdullah)
 * Fix: Pass the correct `for_update` value for `get_form_class` in `SnippetViewSet` edit views (Sage Abdullah)
 * Fix: Move comment notifications toggle to the comments side panel (Sage Abdullah)
 * Fix: Remove comment button on InlinePanel fields (Sage Abdullah)
 * Fix: Fix missing link to `UsageView` from `EditView` for snippets (Christer Jensen)
 * Fix: Prevent lowercase conversions of IndexView column headers (Virag Jain)
 * Fix: Fix various colour issues in dark mode (Thibaud Colas)
 * Docs: Update documentation for `log_action` parameter on `RevisionMixin.save_revision` (Christer Jensen)


5.0 (02.05.2023)
~~~~~~~~~~~~~~~~

 * Added support for Django 4.2
 * Object usage information on deleting objects (Sage Abdullah)
 * Support for SVG images (Joshua Munn, with sponsorship from YouGov)
 * Custom validation support for StreamField (Matt Westcott)
 * Add `WAGTAILIMAGES_EXTENSIONS` setting to restrict image uploads to specific file types (Aman Pandey, Ananjan-R)
 * Update user list column level to `Access level` to be easier to understand (Vallabh Tiwari)
 * Migrate `.button-longrunning` behaviour to a Stimulus controller with support for custom label element & duration (Loveth Omokaro)