@@ -42,6 +42,7 @@ FieldPanels can now be marked as read-only with the `read_only=True` keyword arg
  * Switch to ruff for flake8 / isort code checking (Oliver Parker)
  * Deprecate `insert_editor_css` in favour of `insert_global_admin_css` (Ester Beltrami)
  * Optimise use of `specific` on Task and TaskState (Matt Westcott)
+ * Use table UI component for workflow task index view (Matt Westcott)
 
 
 ## Upgrade considerations
