@@ -16,47 +16,7 @@
 
     <div class="nice-padding">
         {% if tasks %}
-            <table class="listing">
-                <thead>
-                    <tr>
-                        <th>
-                            {% trans "Name" %}
-                        </th>
-                        <th>
-                            {% trans "Type" %}
-                        </th>
-                        <th>
-                            {% trans "Used on" %}
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for task in tasks %}
-                        <tr>
-                            <td class="title">
-                                <div class="title-wrapper">
-                                    <a href="{% url view.edit_url_name task.pk %}">{{ task }}</a>
-                                    {% trans "Disabled" as status_label %}
-                                    {% if not task.active %}{% status status_label %}{% endif %}
-                                </div>
-                            </td>
-                            <td>
-                                {{ task.get_verbose_name }}
-                            </td>
-                            <td>
-                                {% for workflow in task.active_workflows|slice:":5" %}
-                                    <a href="{% url 'wagtailadmin_workflows:edit' workflow.pk %}">{{ workflow.name }}{% if not forloop.last %}, {% endif %}</a>
-                                {% empty %}
-                                    {% trans "Not used" %}
-                                {% endfor %}
-                                {% if task.active_workflows.count > 5 %}
-                                    {% blocktrans trimmed count counter=task.active_workflows.count|add:-5 %}+{{ counter }} more{% plural %}+{{ counter }} more{% endblocktrans %}
-                                {% endif %}
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+            {% component table %}
         {% else %}
             {% url view.add_url_name as add_url %}
             {% if showing_disabled %}
